# original-yawot

./: CMakeLists.txt  LICENSE  README.md
src/: version.cpp
src/api/yawot/: version.h
src/configure/: version.in.h
